Bug 1605936 - Align horizontal seperator with toolbar border. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D59814

UltraBlame original commit: 0a72032848b0117a3124df10a73333c4e977b1ee

--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -52,6 +52,9 @@
   width: calc(100% - 2 * @urlbarViewMarginInline@);
   
   border-inline: 1px solid transparent;
+  
+
+  margin-block-start: -@urlbarBreakoutExtend@;
 }
 
 .urlbarView {
